--- a/supersite/Gemfile
+++ b/supersite/Gemfile
@@ -2,7 +2,11 @@
 # the following line to use "https"
 source 'http://rubygems.org'
 
-gem "middleman", "~>3.1.6"
+gem "middleman", "~>3.1.6" 
+gem "susy", "~> 1.0.9"
+gem "bourbon", "~> 3.1.8"
+gem "neat", "~> 1.5.0"
+
 
 # Live-reloading plugin
 gem "middleman-livereload", "~> 3.1.0"
